# gstpop

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md  meson.build  meson_options.txt
.github/workflows/: packages.yml  release.yml
client/: README.md
client/c/: meson.build
client/c/src/: main.c
client/rust/: Cargo.toml
client/rust/src/: main.rs
daemon/: Cargo.toml  README.md
daemon/examples/: ws_client.rs
daemon/src/: cli_tests.rs  error.rs  lib.rs  main.rs  playback.rs  server.rs  signal.rs
daemon/src/cmd/: common.rs  daemon.rs  discover.rs  inspect.rs  launch.rs  mod.rs  play.rs
daemon/src/dbus/: manager.rs  mod.rs  pipeline.rs
daemon/src/gst/: discoverer.rs  discoverer_tests.rs  manager.rs  mod.rs  pipeline.rs  registry.rs  registry_tests.rs
daemon/src/websocket/: manager.rs  protocol.rs  protocol_tests.rs  server.rs
daemon/tests/: websocket_integration.rs
data/: gst-pop.service.in
docker/: Dockerfile  docker-compose.yml
lib/: meson.build
lib/src/: gpop-client.c  gpop-client.h  gpop-dbus-interface.c  gpop-dbus-interface.h  gpop-main.c  gpop-manager.c  gpop-parser.c  gpop-pipeline.c  gpop-private.h  gstpop-client.c  gstpop-client.h  gstpop-dbus-interface.c  gstpop-dbus-interface.h  gstpop-main.c  gstpop-main.h  gstpop-manager.c  gstpop-manager.h  gstpop-parser.c  gstpop-parser.h  gstpop-pipeline.c  gstpop-pipeline.h  gstpop-private.h
web/: Cargo.toml
web/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs
web/src/api/: jobs.rs
web/src/job/: manager.rs  mod.rs  pipeline.rs  types.rs
web/src/storage/: mod.rs
web/src/ws/: client.rs  gpop.rs  mod.rs
