[package]
name = "gst-pop-client"
version = "0.2.0"
edition = "2021"
authors = ["Stéphane Cerveau"]
license = "GPL-3.0-or-later"
description = "GStreamer Prince of Parser - WebSocket client"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
rustyline = "15"
